adding primeNG corrections

--- a/src/app/pages/sign-up/sign-up.component.html
+++ b/src/app/pages/sign-up/sign-up.component.html
@@ -424,6 +424,7 @@
       >
         submit
       </button>
+      <p-messages [(value)]="msgs"></p-messages>
     </div>
   </mat-card-actions>
 </mat-card>
