--- a/src/app/pages/sign-in/sign-in.component.html
+++ b/src/app/pages/sign-in/sign-in.component.html
@@ -21,7 +21,7 @@
         </mat-card-title>
         <br/><br/>
         <mat-card-subtitle class="sign-in-subtitle">
-          employee sign-in
+          Employee Sign-In
         </mat-card-subtitle>
         <p class="valid-title" style="text-align: center;font-family:Karla;color:#f5f5f5">Please enter a valid username and password to proceed</p>
         <mat-card-content>
@@ -61,7 +61,7 @@
               </mat-card-actions>
 
               <p style="text-align: center; font-weight: lighter;">
-                <a routerLink="/post-session/sign-up" style="text-decoration: underline;color:#F5F5F5" class="help-link" color="primary">Create an Account</a>
+                <a routerLink="/post-session/sign-up" style="text-decoration: underline;color:#F5F5F5" class="help-link" color="primary">Register for an Account</a>
               </p>
 
               <p style="text-align:center; font-weight: lighter;">
