--- a/src/app/shared/auth-layout/auth-layout.component.html
+++ b/src/app/shared/auth-layout/auth-layout.component.html
@@ -16,18 +16,9 @@
         <!-- logo -->
         <a routerLink="/" class="logo-navbar">Bob's <br/> Computer Repair Shop</a>
         <title class="dashboard-header">administrator dashboard</title>
-      </div>
 
-    </mat-toolbar>
-    <ul>
-      <li><a>Create an Invoice</a></li>
-      <li><a (click)="userConfig()">Users</a></li>
-      <li><a (click)="questionConfig()">Security Questions</a></li>
-      <li><a (click)="roleConfig()">Roles</a></li>
-      <li><a (click)="adminReport()">Service Graph</a></li>
-
-      <li style="float:right"><a class="active" [matMenuTriggerFor]="profileMenu"
-        aria-label="User Profile Menu">admin <mat-icon style="font-size: 18px;">perm_identity</mat-icon>
+        <a [matMenuTriggerFor]="profileMenu"
+        aria-label="User Profile Menu" style="font-size: 24px; margin-left: 40px;">admin <mat-icon style="font-size: 18px;">perm_identity</mat-icon>
       <!-- Icon drop down menu items -->
       <mat-menu #profileMenu="matMenu">
         <p style="padding: 10px;color:white;" class="menu">
@@ -67,8 +58,10 @@
         <span class="menu">Sign-Out</span>
       </button>
     </mat-menu>
-      </a></li>
-    </ul>
+      </a>
+      </div>
+
+    </mat-toolbar>
   </nav>
 
   <!-- main content -->
@@ -84,7 +77,8 @@
       <mat-toolbar class="footer-content">
         <p style="margin-left: 2em">
           &copy; {{ year | date: "yyyy" }} - Bob's Computer Repair Shop -
-          <a href="https://www.bellevue.edu/" class="bu-link" target="_blank">Bellevue University</a>
+          <a href="https://www.bellevue.edu/" class="footer-link" target="_blank">Bellevue University</a>
+          <a routerLink="/post-session/sign-in" class="footer-link" style="margin-left: 200px;">Employee Sign-In | Register</a>
         </p>
       </mat-toolbar>
     </footer>
