--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -39,7 +39,7 @@
       <mat-toolbar class="footer-content">
         &copy; {{ year | date: "yyyy" }} - Bob's Computer Repair Shop -&nbsp;
          <a href="https://www.bellevue.edu/" class="footer-link" target="_blank">Bellevue University</a>
-        <a routerLink="/post-session/sign-in" class="footer-link" style="margin-left: 200px;">Employee Sign-In</a>
+        <a routerLink="/post-session/sign-in" class="footer-link" style="margin-left: 200px;">Employee Sign-In | Register</a>
       </mat-toolbar>
     </footer>
   </div>
