--- a/src/app/pages/services-list/services-list.component.css
+++ b/src/app/pages/services-list/services-list.component.css
@@ -1,10 +1,10 @@
 /*
 =======================================
 // Title: Bob’s Computer Repair Shop
-// Date: 20 April 2022
+// Date: 5 May 2022
 // Authors: Evan Durkin, Keith Hall,
 // Gustavo Roo Gonzalez, and Gunner Bradley
-// Description: Security Question List Styling
+// Description: Service List Styling
 =======================================
 */
 
