--- a/src/app/shared/auth-layout/auth-layout.component.html
+++ b/src/app/shared/auth-layout/auth-layout.component.html
@@ -32,14 +32,19 @@
       <mat-divider></mat-divider>
 
       <!-- Dropdown menu links -->
+      <button  mat-menu-item (click)="servicesConfig()">
+        <mat-icon class="menu">list_alt</mat-icon>
+        <span class="menu">Service Configuration</span>
+      </button>
+
+      <button  mat-menu-item (click)="adminReport()">
+        <mat-icon class="menu">pie_chart_outline</mat-icon>
+        <span class="menu">Service Graph</span>
+      </button>
+
       <button  mat-menu-item (click)="userConfig()" class="menu">
         <mat-icon class="menu">people</mat-icon>
         <span class="menu">User Configuration</span>
-      </button>
-
-      <button  mat-menu-item (click)="questionConfig()" class="menu">
-        <mat-icon class="menu">security</mat-icon>
-        <span class="menu">Security Question Configuration</span>
       </button>
 
       <button  mat-menu-item (click)="roleConfig()" class="menu">
@@ -47,10 +52,11 @@
         <span class="menu">Role Configuration</span>
       </button>
 
-      <button  mat-menu-item (click)="adminReport()">
-        <mat-icon class="menu">pie_chart_outline</mat-icon>
-        <span class="menu">Service Graph</span>
+      <button  mat-menu-item (click)="questionConfig()" class="menu">
+        <mat-icon class="menu">security</mat-icon>
+        <span class="menu">Security Question Configuration</span>
       </button>
+
       <!-- Lower divider -->
       <mat-divider></mat-divider>
       <button mat-menu-item (click)="signOut()" class="menu">
