fixing verify security question error

--- a/src/app/shared/standard-layout/standard-layout.component.html
+++ b/src/app/shared/standard-layout/standard-layout.component.html
@@ -33,7 +33,7 @@
 
           <!-- Lower divider -->
           <mat-divider></mat-divider>
-          <button  mat-menu-item  class="menu"> <!--need to add the (click) event-->
+          <button  mat-menu-item  (click)="editProfile()" class="menu">
             <mat-icon class="menu">people</mat-icon>
             <span class="menu">Edit Profile</span>
           </button>
