--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -1,1 +1,70 @@
-<p>user-profile works!</p>
+<!--/*
+=======================================
+// Title: Bob’s Computer Repair Shop
+// Date: 23 April 2022
+// Authors: Evan Durkin, Keith Hall,
+// Gustavo Roo Gonzalez, and Gunner Bradley
+// Description: User List HTML file
+=======================================
+*/-->
+
+<div fxLayout="column" style="margin-top: 3em;">
+
+  <!--mat card to hold users configuration table-->
+  <mat-card class="users-list-card">
+    <mat-card-title class="users-title">Edit Profile</mat-card-title>
+
+    <mat-card-content *ngIf="users">
+      <!-- mat-table with header sections for user data-->
+             <table mat-table fxFlexFill [dataSource]="users">
+        <ng-container matColumnDef="userName">
+          <th mat-header-cell *matHeaderCellDef>Username</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.userName }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="firstName">
+          <th mat-header-cell *matHeaderCellDef>First Name</th>
+          <td mat-cell *matCellDef="let element">{{ element.firstName }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="lastName">
+          <th mat-header-cell *matHeaderCellDef>Last Name</th>
+          <td mat-cell *matCellDef="let element">{{ element.lastName }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="phoneNumber">
+          <th mat-header-cell *matHeaderCellDef>Phone Number</th>
+          <td mat-cell *matCellDef="let element">{{ element.phoneNumber }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="address">
+          <th mat-header-cell *matHeaderCellDef>Address</th>
+          <td mat-cell *matCellDef="let element">{{ element.address }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="email">
+          <th mat-header-cell *matHeaderCellDef>Email</th>
+          <td mat-cell *matCellDef="let element">{{ element.email }}</td>
+        </ng-container>
+        <ng-container matColumnDef="functions">
+
+          <!-- functions for editing profile -->
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let element">
+
+            <button mat-icon-button routerLink="/session/users/{{ element._id }}">
+              <mat-icon color="black" class="functions-icon">edit</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+
+
+    </mat-card-content>
+  </mat-card>
+</div>
