--- a/src/app/pages/services-list/services-list.component.html
+++ b/src/app/pages/services-list/services-list.component.html
@@ -29,6 +29,13 @@
           </td>
         </ng-container>
 
+        <ng-container matColumnDef="price">
+          <th mat-header-cell *matHeaderCellDef>Price</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.text }}
+          </td>
+        </ng-container>
+
         <ng-container matColumnDef="functions">
           <!-- functions for editing and deleting a user -->
           <th mat-header-cell *matHeaderCellDef>Functions</th>
