--- a/src/app/pages/services-list/services-list.component.html
+++ b/src/app/pages/services-list/services-list.component.html
@@ -25,14 +25,14 @@
         <ng-container matColumnDef="serviceName">
           <th mat-header-cell *matHeaderCellDef>Service</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.text }}
+            {{ element.serviceName }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="price">
           <th mat-header-cell *matHeaderCellDef>Price</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.text }}
+            {{ element.price }}
           </td>
         </ng-container>
 
