--- a/src/app/shared/auth-layout/auth-layout.component.html
+++ b/src/app/shared/auth-layout/auth-layout.component.html
@@ -81,10 +81,10 @@
   <div fxFlex>
     <footer class="footer">
       <mat-toolbar class="footer-content">
-        <p style="margin-left: 2em">
+        <p style="margin-left: 2em; margin-right: 2em; width: 100%;">
           &copy; {{ year | date: "yyyy" }} - Bob's Computer Repair Shop -
           <a href="https://www.bellevue.edu/" class="footer-link" target="_blank">Bellevue University</a>
-          <a routerLink="/post-session/sign-in" class="footer-link" style="margin-left: 200px;">Employee Sign-In | Register</a>
+          <a routerLink="/post-session/sign-in" class="footer-link" style="float: right;">Employee Sign-In | Register</a>
         </p>
       </mat-toolbar>
     </footer>
