--- a/src/app/shared/standard-layout/standard-layout.component.html
+++ b/src/app/shared/standard-layout/standard-layout.component.html
@@ -61,11 +61,11 @@
   <!-- footer -->
   <div fxFlex>
     <footer class="footer">
-      <mat-toolbar class="footer-content" style="padding: 20px;">
-        <p style="margin-left: 2em">
+      <mat-toolbar class="footer-content">
+        <p style="margin-left: 2em; margin-right: 2em; width: 100%;">
           &copy; {{ year | date: "yyyy" }} - Bob's Computer Repair Shop -
           <a href="https://www.bellevue.edu/" class="footer-link" target="_blank">Bellevue University</a>
-          <a routerLink="/post-session/sign-in" class="footer-link" style="margin-left: 200px;">Employee Sign-In | Register</a>
+          <a routerLink="/post-session/sign-in" class="footer-link" style="float: right;">Employee Sign-In | Register</a>
         </p>
       </mat-toolbar>
     </footer>
