--- a/src/app/pages/role-details/role-details.component.html
+++ b/src/app/pages/role-details/role-details.component.html
@@ -1,3 +1,11 @@
+<!--
+    Title: role-details.component.html
+    Date: 07 May 2022
+    Authors: Evan Durkin, Keith Hall,
+    Gustavo Roo Gonzalez, and Gunner Bradley
+    Description: Html file for the role-details component.
+-->
+
 <div fxLayout="column">
   <mat-card class="mat-elevation-z8 hp-card-sm">
     <mat-card-title>Role Details</mat-card-title>
