--- a/src/app/pages/role-list/role-list.component.html
+++ b/src/app/pages/role-list/role-list.component.html
@@ -1,3 +1,11 @@
+<!--/*
+    Title: role-list.component.html
+    Date: 07 May 2022
+    Authors: Evan Durkin, Keith Hall,
+    Gustavo Roo Gonzalez, and Gunner Bradley
+    Description: HTML file for the role-list component.
+*/-->
+
 <div fxLayout="column" style="margin-top: 3em">
   <mat-card class="roles-list-card">
     <mat-card-title class="roles-title">Roles Configuration</mat-card-title>
