--- a/src/app/pages/role-list/role-list.component.html
+++ b/src/app/pages/role-list/role-list.component.html
@@ -34,7 +34,7 @@
         <ng-container matColumnDef="functions">
           <th mat-header-cell *matHeaderCellDef>Functions</th>
           <td mat-cell *matCellDef="let role">
-            <button mat-icon-button routerLink="/roles/{{ role._id }}">
+            <button mat-icon-button routerLink="/session/roles/{{ role._id }}">
               <mat-icon class="edit-icon">edit</mat-icon>
             </button>
             <button mat-icon-button (click)="delete(role._id, role.text)">
