--- a/src/app/pages/sign-up/sign-up.component.html
+++ b/src/app/pages/sign-up/sign-up.component.html
@@ -72,8 +72,16 @@
               <mat-list-item>
                 <mat-form-field fxFlex appearance="fill">
                   <mat-label>Street</mat-label>
-                  <input matInput [formControl]="contactForm.controls['street']" />
-                  <mat-error class="error" *ngIf="contactForm.controls['street'].hasError('required') && contactForm.controls['street'].touched">
+                  <input matInput [formControl]="contactForm.controls['addressLineOne']" />
+                  <mat-error class="error" *ngIf="contactForm.controls['addressLineOne'].hasError('required') && contactForm.controls['addressLineOne'].touched">
+                    Street Is A Required Field
+                  </mat-error>
+                </mat-form-field>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <mat-form-field fxFlex appearance="fill">
+                  <mat-label>Street</mat-label>
+                  <input matInput [formControl]="contactForm.controls['addressLineTwo']" />
+                  <mat-error class="error" *ngIf="contactForm.controls['addressLineTwo'].hasError('required') && contactForm.controls['addressLineTwo'].touched">
                     Street Is A Required Field
                   </mat-error>
                 </mat-form-field>
