--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -11,7 +11,7 @@
     <h1>Bob's <br /><br>Computer Repair Shop</h1><br /><br>
     <p style="width:50%">We offer repair services for many different types computing devices including
       smartphones, laptops, and tablets</p><br>
-    <button mat-flat-button color=accent style="margin-right: 10px" [routerLink]="['/services']">Get A Free Estimate</button>
+    <button mat-flat-button color=accent style="margin-right: 10px" [routerLink]="['/guest-services']">Get A Free Estimate</button>
   </div>
   <div class="blue caption">
     <em>
