adding styling changes to sign-up

--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -265,3 +265,7 @@ body {
 .mat-tab-group.mat-background-primary > .mat-tab-header .mat-tab-label, .mat-tab-group.mat-background-primary > .mat-tab-link-container .mat-tab-link, .mat-tab-nav-bar.mat-background-primary > .mat-tab-header .mat-tab-label, .mat-tab-nav-bar.mat-background-primary > .mat-tab-link-container .mat-tab-link {
   margin: 0 20px;
 }
+
+mat-form-field {
+  border-radius: 0;
+}
