--- a/src/app/pages/sign-up/sign-up.component.css
+++ b/src/app/pages/sign-up/sign-up.component.css
@@ -14,16 +14,19 @@
   padding: 0 0 15px 0;
   margin: 5% auto;
   border-radius: 0px;
-  background-color: #f5f5f6;;
 }
 
+.mat-horizontal-content-container {
+  background-color: #ffffff;
+}
 .card-title {
   text-align: center;
-  padding-top: 12px;
-  padding-bottom: 12px;
+  padding-top: 19px;
+  padding-bottom: 19px;
   background-color: #323232;
-  font-size: 26px;
+  font-size: 22px;
   margin-bottom: 0;
+  font-family: 'Aldrich', sans-serif;
 }
 .mat-tab-group {
   min-height: 400px;
@@ -49,6 +52,18 @@
 
 .error-input {
   background-color: #f5f5f6;
+}
+
+.input-error {
+
+}
+
+.form {
+  margin-top: 35px;
+}
+
+.form-field {
+  margin-bottom: 5px;
 }
 
 mat-tab-label {
@@ -86,4 +101,25 @@ mat-option {
 
 mat-select-value {
   color: black;
+}
+
+.mat-list-base .mat-list-item, .mat-list-base .mat-list-option {
+  margin-bottom: 15px;
+}
+
+.mat-form-field-appearance-fill .mat-form-field-flex {
+  border-radius: 0;
+}
+
+.mat-form-field-flex .ng-tns-c145-6 {
+  width: 66px;
+}
+
+.btn-primary {
+  border-radius: 0;
+  font-size: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 3px;
+  padding-top: 3px;
 }
