--- a/src/app/pages/sign-up/sign-up.component.html
+++ b/src/app/pages/sign-up/sign-up.component.html
@@ -8,59 +8,102 @@
 
 <div fxLayout="column">
   <br><br>
-  <mat-card fxFlex class="card-container mat-elevation-z4">
+  <mat-card fxFlex class="card-container mat-elevation-z4" style="background-color: #ffffff;">
     <mat-card-title class="card-title">Account Registration</mat-card-title>
-    <mat-card-content fxLayout="column" fxLayoutGap="10px">
+    <mat-card-content fxLayout="column" fxLayoutGap="10px" style="background-color: #ffffff;"class="card-content">
       <mat-horizontal-stepper #stepper linear>
 
         <!--Start of contact form (step #1)-->
         <mat-step fxFlex [stepControl]="contactForm" class="required" errorMessage="Contact is Required">
-          <form [formGroup]="contactForm">
+          <form [formGroup]="contactForm" class="form">
             <ng-template matStepLabel>Contact Information</ng-template>
             <br>
             <mat-list>
 
               <mat-list-item>
-
-                <!--First Name field for contact form-->
-                <mat-form-field fxFlex appearance="fill">
+                <!-- First Name -->
+                <mat-form-field fxFlex appearance="fill" class="form-field" style="margin-right: 5px; margin-bottom: 15px;">
                   <mat-label>First Name</mat-label>
                   <input matInput [formControl]="contactForm.controls['firstName']" />
-                  <mat-error class="error" *ngIf="contactForm.controls['firstName'].hasError('required') && contactForm.controls['firstName'].touched">
+                  <mat-error class="input-error" *ngIf="contactForm.controls['firstName'].hasError('required') && contactForm.controls['firstName'].touched">
                     First Name Is A Required Field
                   </mat-error>
                 </mat-form-field>
 
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <!-- Space between input fields on the same line -->
-
-                <!--Last name -->
-                <mat-form-field fxFlex appearance="fill">
+                <!-- Last name -->
+                <mat-form-field fxFlex appearance="fill" style="margin-bottom: 15px;">
                   <mat-label>Last Name</mat-label>
                   <input matInput [formControl]="contactForm.controls['lastName']" />
-                  <mat-error class="error" *ngIf="contactForm.controls['lastName'].hasError('required') && contactForm.controls['lastName'].touched">
+                  <mat-error class="input-error" *ngIf="contactForm.controls['lastName'].hasError('required') && contactForm.controls['lastName'].touched">
                     Last Name Is A Required Field
                   </mat-error>
                 </mat-form-field>
               </mat-list-item>
-              <br><br>
+
+               <!-- Address Line 1 -->
+              <mat-list-item>
+                <mat-form-field fxFlex appearance="fill">
+                  <mat-label>Address Line 1</mat-label>
+                  <input matInput [formControl]="contactForm.controls['addressLineOne']" />
+                  <mat-error class="input-error" *ngIf="contactForm.controls['addressLineOne'].hasError('required') && contactForm.controls['addressLineOne'].touched">
+                    Street Is A Required Field
+                  </mat-error>
+                </mat-form-field>
+              </mat-list-item>
+
+              <!-- Address Line 2 -->
+              <mat-list-item>
+                <mat-form-field fxFlex appearance="fill">
+                  <mat-label>Address Line 2</mat-label>
+                  <input matInput [formControl]="contactForm.controls['addressLineTwo']" />
+                  <mat-error class="input-error" *ngIf="contactForm.controls['addressLineTwo'].hasError('required') && contactForm.controls['addressLineTwo'].touched">
+                    Street Is A Required Field
+                  </mat-error>
+                </mat-form-field>
+              </mat-list-item>
+
+              <mat-list-item>
+                <!-- City -->
+                <mat-form-field fxFlex appearance="fill" style="margin-right: 5px;">
+                  <mat-label>City</mat-label>
+                  <input matInput [formControl]="contactForm.controls['city']" />
+                  <mat-error class="input-error" *ngIf="contactForm.controls['city'].hasError('required') && contactForm.controls['city'].touched">
+                    City Is A Required Field
+                  </mat-error>
+                </mat-form-field>
+                <!-- State -->
+                <mat-form-field fxFlex appearance="fill" style="margin-right: 5px; width: 66px;">
+                  <mat-label>State</mat-label>
+                  <input matInput [formControl]="contactForm.controls['state']"/>
+                  <mat-error class="input-error" *ngIf="contactForm.controls['state'].hasError('required') && contactForm.controls['state'].touched">
+                    State Is A Required Field
+                  </mat-error>
+                </mat-form-field>
+                <!-- Zip -->
+                <mat-form-field fxFlex appearance="fill">
+                  <mat-label>Zip Code</mat-label>
+                  <input matInput [formControl]="contactForm.controls['zip']" />
+                  <mat-error class="input-error" *ngIf="contactForm.controls['zip'].hasError('required') && contactForm.controls['zip'].touched">
+                    Zip Code Is A Required Field
+                  </mat-error>
+                </mat-form-field>
+              </mat-list-item>
 
               <mat-list-item>
                 <!--Phone Number -->
-                <mat-form-field fxFlex appearance="fill">
+                <mat-form-field fxFlex appearance="fill" style="margin-right: 5px; margin-top: 15px;">
                   <mat-label>Phone Number</mat-label>
                   <input matInput [formControl]="contactForm.controls['phoneNumber']" />
-                  <mat-error class="error" *ngIf="contactForm.controls['phoneNumber'].hasError('required') && contactForm.controls['phoneNumber'].touched">
+                  <mat-error class="input-error" *ngIf="contactForm.controls['phoneNumber'].hasError('required') && contactForm.controls['phoneNumber'].touched">
                     Phone Number Is A Required Field
                   </mat-error>
                 </mat-form-field>
 
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
                 <!--Email field -->
-                <mat-form-field fxFlex appearance="fill">
+                <mat-form-field fxFlex appearance="fill" style="margin-top:15px">
                   <mat-label>Email</mat-label>
                   <input matInput [formControl]="contactForm.controls['email']" />
-                  <mat-error class="error" *ngIf="contactForm.controls['email'].hasError('required') && contactForm.controls['email'].touched">
+                  <mat-error class="input-error" *ngIf="contactForm.controls['email'].hasError('required') && contactForm.controls['email'].touched">
                     Email Is A Required Field
                   </mat-error>
                 </mat-form-field>
@@ -68,141 +111,90 @@
               </mat-list-item>
               <br><br> <!-- Create another row -->
 
-                <!--Address fields -->
-              <mat-list-item>
-                <mat-form-field fxFlex appearance="fill">
-                  <mat-label>Street</mat-label>
-                  <input matInput [formControl]="contactForm.controls['addressLineOne']" />
-                  <mat-error class="error" *ngIf="contactForm.controls['addressLineOne'].hasError('required') && contactForm.controls['addressLineOne'].touched">
-                    Street Is A Required Field
-                  </mat-error>
-                </mat-form-field>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <mat-form-field fxFlex appearance="fill">
-                  <mat-label>Street</mat-label>
-                  <input matInput [formControl]="contactForm.controls['addressLineTwo']" />
-                  <mat-error class="error" *ngIf="contactForm.controls['addressLineTwo'].hasError('required') && contactForm.controls['addressLineTwo'].touched">
-                    Street Is A Required Field
-                  </mat-error>
-                </mat-form-field>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <mat-form-field fxFlex appearance="fill">
-                  <mat-label>City</mat-label>
-                  <input matInput [formControl]="contactForm.controls['city']" />
-                  <mat-error class="error" *ngIf="contactForm.controls['city'].hasError('required') && contactForm.controls['city'].touched">
-                    City Is A Required Field
-                  </mat-error>
-                </mat-form-field>
-              </mat-list-item>
-              <br><br>
-
-              <mat-list-item>
-                <mat-form-field fxFlex appearance="fill">
-                  <mat-label>State</mat-label>
-                  <input matInput [formControl]="contactForm.controls['state']" />
-                  <mat-error class="error" *ngIf="contactForm.controls['state'].hasError('required') && contactForm.controls['state'].touched">
-                    State Is A Required Field
-                  </mat-error>
-                </mat-form-field>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <mat-form-field fxFlex appearance="fill">
-                  <mat-label>Zip Code</mat-label>
-                  <input matInput [formControl]="contactForm.controls['zip']" />
-                  <mat-error class="error" *ngIf="contactForm.controls['zip'].hasError('required') && contactForm.controls['zip'].touched">
-                    Zip Code Is A Required Field
-                  </mat-error>
-                </mat-form-field>
-              </mat-list-item>
-              <br><br>
-
             </mat-list>
 
             <!--Button to move to next step-->
-            <br>
-            <div fxLayoutAlign="end">
-              <button mat-raised-button color="accent" matStepperNext>Next</button>
+            <div style="display: inline-block; width: 100%;">
+              <a routerLink="/">Return Home</a>
+              <button mat-stroked-button class="btn-primary" style="float: right;" matStepperNext>Next</button>
             </div>
           </form>
         </mat-step>
 
         <!--Security Questions Form (Step #2)-->
         <mat-step [stepControl]="securityQuestionsForm" errorMessage="Security Questions Are Required">
-          <form [formGroup]="securityQuestionsForm">
+          <form [formGroup]="securityQuestionsForm" class="form">
             <ng-template matStepLabel>Security Questions</ng-template>
             <br>
             <mat-list>
 
               <mat-list-item>
                 <!--Security Question #1-->
-                <mat-form-field fxFlex appearance="fill">
-                  <mat-label>Security Questions</mat-label>
+                <mat-form-field fxFlex appearance="fill" style="margin-right: 15px; margin-bottom: 7px;">
+                  <mat-label>Security Question 1</mat-label>
                   <mat-select [formControl]="securityQuestionsForm.controls['securityQuestion1']">
                     <mat-option *ngFor="let question of securityQuestions" [value]="question.text">
                       {{ question.text }}
                     </mat-option>
                   </mat-select>
-                  <mat-error class="error" *ngIf="securityQuestionsForm.controls['securityQuestion1'].hasError('required') && securityQuestionsForm.controls['securityQuestion1'].touched">
-                    This Is A Required Field
+                  <mat-error class="input-error" *ngIf="securityQuestionsForm.controls['securityQuestion1'].hasError('required') && securityQuestionsForm.controls['securityQuestion1'].touched">
+                    You must select a question.
                   </mat-error>
                 </mat-form-field>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
                 <!--Security Question Answer #1-->
-                <mat-form-field fxFlex appearance="fill">
+                <mat-form-field fxFlex appearance="fill" style="margin-bottom: 7px;">
                   <mat-label>Security Question Answer</mat-label>
                   <input matInput [formControl]="securityQuestionsForm.controls['answerToSecurityQuestion1']" />
-                  <mat-error class="error" *ngIf="securityQuestionsForm.controls['answerToSecurityQuestion1'].hasError('required') && securityQuestionsForm.controls['answerToSecurityQuestion1'].touched">
-                    This Is A Required Field
+                  <mat-error class="input-error" *ngIf="securityQuestionsForm.controls['answerToSecurityQuestion1'].hasError('required') && securityQuestionsForm.controls['answerToSecurityQuestion1'].touched">
+                    You must provide an answer.
                   </mat-error>
                 </mat-form-field>
               </mat-list-item>
-              <br><br>
 
               <mat-list-item>
                 <!--Security Question #2-->
-                <mat-form-field fxFlex appearance="fill">
-                  <mat-label>Security Questions</mat-label>
+                <mat-form-field fxFlex appearance="fill" style="margin-right: 15px; margin-bottom: 7px;">
+                  <mat-label>Security Question 2</mat-label>
                   <mat-select [formControl]="securityQuestionsForm.controls['securityQuestion2']">
                     <mat-option *ngFor="let question of securityQuestions" [value]="question.text">
                       {{ question.text }}
                     </mat-option>
                   </mat-select>
-                  <mat-error class="error" *ngIf="securityQuestionsForm.controls['securityQuestion2'].hasError('required') && securityQuestionsForm.controls['securityQuestion2'].touched">
-                    This Is A Required Field
+                  <mat-error class="input-error" *ngIf="securityQuestionsForm.controls['securityQuestion2'].hasError('required') && securityQuestionsForm.controls['securityQuestion2'].touched">
+                    You must select a question.
                   </mat-error>
                 </mat-form-field>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
                 <!--Security Question Answer #2-->
-                <mat-form-field fxFlex appearance="fill">
+                <mat-form-field fxFlex appearance="fill" style="margin-bottom: 7px;">
                   <mat-label>Security Question Answer</mat-label>
                   <input matInput [formControl]="securityQuestionsForm.controls['answerToSecurityQuestion2']" />
-                  <mat-error class="error" *ngIf="securityQuestionsForm.controls['answerToSecurityQuestion2'].hasError('required') && securityQuestionsForm.controls['answerToSecurityQuestion2'].touched">
-                    This Is A Required Field
+                  <mat-error class="input-error" *ngIf="securityQuestionsForm.controls['answerToSecurityQuestion2'].hasError('required') && securityQuestionsForm.controls['answerToSecurityQuestion2'].touched">
+                    You must provide an answer.
                   </mat-error>
                 </mat-form-field>
               </mat-list-item>
-              <br><br>
 
               <!--Security Question #3-->
               <mat-list-item>
-                <mat-form-field fxFlex appearance="fill">
-                  <mat-label>Security Questions</mat-label>
+                <mat-form-field fxFlex appearance="fill" style="margin-right: 15px; margin-bottom: 7px;">
+                  <mat-label>Security Question 3</mat-label>
                   <mat-select [formControl]="securityQuestionsForm.controls['securityQuestion3']">
                     <mat-option *ngFor="let question of securityQuestions" [value]="question.text">
                       {{ question.text }}
                     </mat-option>
                   </mat-select>
-                  <mat-error class="error" *ngIf="securityQuestionsForm.controls['securityQuestion3'].hasError('required') && securityQuestionsForm.controls['securityQuestion3'].touched">
-                    This Is A Required Field
+                  <mat-error class="input-error" *ngIf="securityQuestionsForm.controls['securityQuestion3'].hasError('required') && securityQuestionsForm.controls['securityQuestion3'].touched">
+                    You must select a question.
                   </mat-error>
                 </mat-form-field>
 
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-                <mat-form-field fxFlex appearance="fill">
+                <mat-form-field fxFlex appearance="fill" style="margin-bottom: 7px;">
                   <mat-label>Security Question Answer</mat-label>
                   <input matInput [formControl]="securityQuestionsForm.controls['answerToSecurityQuestion3']" />
-                  <mat-error class="error" *ngIf="securityQuestionsForm.controls['answerToSecurityQuestion3'].hasError('required') && securityQuestionsForm.controls['answerToSecurityQuestion3'].touched">
-                    This Is A Required Field
+                  <mat-error class="input-error" *ngIf="securityQuestionsForm.controls['answerToSecurityQuestion3'].hasError('required') && securityQuestionsForm.controls['answerToSecurityQuestion3'].touched">
+                    You must provide an answer.
                   </mat-error>
                 </mat-form-field>
               </mat-list-item>
@@ -211,15 +203,15 @@
 
             <!--Button to take to next step or previous step-->
             <div fxLayoutAlign="end">
-              <button mat-raised-button color="accent" matStepperPrevious>Back</button> &nbsp;&nbsp;
-              <button mat-raised-button color="accent" [disabled]="!securityQuestionsForm.valid" matStepperNext>Next</button>
+              <button mat-stroked-button class="btn-primary" matStepperPrevious>Back</button> &nbsp;&nbsp;
+              <button mat-stroked-button class="btn-primary" [disabled]="!securityQuestionsForm.valid" matStepperNext>Next</button>
             </div>
           </form>
         </mat-step>
 
         <!--Verification Form (Step #3)-->
         <mat-step [stepControl]="credentialsForm" errorMessage="Credentials Is Required">
-          <form [formGroup]="credentialsForm">
+          <form [formGroup]="credentialsForm" class="form">
             <ng-template matStepLabel>Credentials</ng-template>
             <br>
 
@@ -262,11 +254,8 @@
             </div>
           </form>
         </mat-step>
+
       </mat-horizontal-stepper>
-      <!--Returns user to home page-->
-      <div>
-        <button mat-raised-button color="accent" routerLink="/">Return Home</button>
-      </div>
     </mat-card-content>
   </mat-card>
 </div>
